--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start" : "node index.js",
-    "dev" : "nodemon index.js",
+    "KP1" : "node index.js kp1",
+    "kp1" : "node index.js kp1",
+    "KP2" : "node index.js kp2",
+    "kp2" : "node index.js kp2",
+    "dev" : "nodemon index.js dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
